tdf#142871 sw HTML export: avoid unwanted inner PNG for images

Regression from commit e76471c5ce725dae9abb6f78b7674c6f77df34f4 (sw
XHTML / reqif export: export non-PNG graphic shapes directly,
2021-06-02), reqif wants to have a PNG fallback for non-PNG pixel
formats, but this is not needed for plain HTML, make this reqif-only.

Change-Id: I0fc1bc13ad4bf808afbe68407e7db802f910c7a7